[package]
name = "gis-viewer-cli"
version = "0.2.2"
edition = "2021"
description = "View GIS raster and vector files in the terminal"
license = "MIT"
repository = "https://github.com/ominiverdi/gis-viewer-cli"
homepage = "https://github.com/ominiverdi/gis-viewer-cli"
keywords = ["gis", "geotiff", "sentinel", "raster", "terminal"]
categories = ["command-line-utilities", "science::geo"]
readme = "README.md"

[[bin]]
name = "gis-view"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
gdal = { version = "0.19", features = ["bindgen"] }
image = "0.25"
viuer = "0.11"
anyhow = "1.0"
base64 = "0.22"
dialoguer = "0.11"
